assets/css/style.css
/* ... */
#hero:before {
	content: '';
	background: rgba(255, 255, 255, 0.3);
	position: absolute;
	bottom: 0;
	top: 0;
	left: 0;
	right: 0;
}
#hero .container {
	position: relative;
}
#hero h1 {
	margin: 0;
	font-size: 48px;
	font-weight: 700;
	line-height: 56px;
	color: var(--primary-contrast);
	font-family: 'Poppins', sans-serif;
}
#hero h1 span {
	color: var(--secondary);
}
#hero h2 {
	color: var(--primary-contrast);
	margin: 5px 0 30px 0;
	font-size: 24px;
	font-weight: 400;
}
#hero .btn-get-started {
	font-family: 'Roboto', sans-serif;
	text-transform: uppercase;
	font-weight: 500;
	font-size: 14px;
	letter-spacing: 1px;
	display: inline-block;
	padding: 10px 28px;
	border-radius: 4px;
	transition: 0.5s;
	color: var(--primary-contrast);
	background: var(--primary);
}
#hero .btn-get-started:hover {
	background: var(--secondary);
	color: var(--secondary-contrast);
}
#hero .btn-watch-video {
	font-size: 16px;
	transition: 0.5s;
	margin-left: 25px;
	color: var(--primary-contrast);
	font-weight: 600;
	display: flex;
	align-items: center;
}
#hero .btn-watch-video i {
	color: var(--primary);
	font-size: 32px;
	transition: 0.3s;
	line-height: 0;
	margin-right: 8px;
}
#hero .btn-watch-video:hover {
	color: var(--primary);
}
#hero .btn-watch-video:hover i {
	color: var(--light-primary);
}
@media (min-width: 1024px) {
	#hero {
		background-attachment: fixed;
	}
}
@media (max-width: 768px) {
	#hero {
		background-position: -500px;
		height: 100vh;
	}
	#hero h1 {
		font-size: 28px;
		line-height: 36px;
	}
	#hero h2 {
		font-size: 18px;
		line-height: 24px;
		margin-bottom: 30px;
	}
	#hero .btn-get-started,
	#hero .btn-watch-video {
		font-size: 13px;
	}
}
@media (max-height: 500px) {
	#hero {
		height: 120vh;
	}
}

/*--------------------------------------------------------------
# Sections General
--------------------------------------------------------------*/
section {
	padding: 60px 0;
	overflow: hidden;
}

.section-bg {
	background-color: var(--secondary);
}

.section-title {
	text-align: center;
	padding-bottom: 30px;
}
.section-title h2 {
	font-size: 13px;
	letter-spacing: 1px;
	font-weight: 700;
	padding: 8px 20px;
	margin: 0;
	background: var(--primary);
	color: var(--secondary);
	display: inline-block;
	text-transform: uppercase;
	border-radius: 50px;
}
.section-title h3 {
	margin: 15px 0 0 0;
	font-size: 32px;
	font-weight: 700;
}
.section-title h3 span {
	color: var(--primary);
}
.section-title p {
	margin: 15px auto 0 auto;
	font-weight: 600;
}
@media (min-width: 1024px) {
	.section-title p {
		width: 70%;
	}
}

/*--------------------------------------------------------------
# Breadcrumbs
--------------------------------------------------------------*/
.breadcrumbs {
	padding: 20px 0;
	background-color: #f1f6fe;
	min-height: 40px;
}
.breadcrumbs h2 {
	font-size: 24px;
	font-weight: 300;
	margin: 0;
}
@media (max-width: 992px) {
	.breadcrumbs h2 {
		margin: 0 0 10px 0;
	}
}
.breadcrumbs ol {
	display: flex;
	flex-wrap: wrap;
	list-style: none;
	padding: 0;
	margin: 0;
	font-size: 14px;
}
.breadcrumbs ol li + li {
	padding-left: 10px;
}
.breadcrumbs ol li + li::before {
	display: inline-block;
	padding-right: 10px;
	color: #6c757d;
	content: '/';
}
@media (max-width: 768px) {
	.breadcrumbs .d-flex {
		display: block !important;
	}
	.breadcrumbs ol {
		display: block;
	}
	.breadcrumbs ol li {
		display: inline-block;
	}
}

/*--------------------------------------------------------------
# Featured Services
--------------------------------------------------------------*/
.featured-services .icon-box {
	padding: 30px;
	position: relative;
	overflow: hidden;
	background: var(--primary);
	box-shadow: 0 0 29px 0 var(--primary-bg-shadow);
	transition: all 0.3s ease-in-out;
	border-radius: 8px;
	z-index: 1;
}
.featured-services .icon-box::before {
	content: '';
	position: absolute;
	background: var(--primary-contrast);
	right: 0;
	left: 0;
	bottom: 0;
	top: 100%;
	transition: all 0.3s;
	z-index: -1;
}
.featured-services .icon-box:hover::before {
	background: var(--secondary);
	top: 0;
	border-radius: 0px;
}

.featured-services .icon {
	margin-bottom: 15px;
}

.featured-services .iconify {
	margin-bottom: 15px;
	font-size: 40px;
	line-height: 1;
	color: var(--primary-contrast);
	transition: all 0.3s ease-in-out;
}

.featured-services img {
	margin-bottom: 15px;
}

.featured-services .icon i {
	font-size: 48px;
	line-height: 1;
	color: var(--primary-contrast);
	transition: all 0.3s ease-in-out;
}
.featured-services .title {
	font-weight: 700;
	margin-bottom: 15px;
	font-size: 18px;
}
.featured-services .title a {
	color: var(--primary-contrast);
}
.featured-services .description {
	font-size: 15px;
	line-height: 28px;
	margin-bottom: 0;
}
.featured-services .icon-box:hover .title a,
.featured-services .icon-box:hover .description {
	color: var(--secondary-contrast);
}
.featured-services .icon-box:hover .icon i {
	color: var(--secondary-contrast);
}

/*--------------------------------------------------------------
# About
--------------------------------------------------------------*/
#about {
	background: var(--primary);
}

.about p span {
	color: var(--secondary);
	text-transform: uppercase;
}

.about .section-title h2 {
	background: var(--light-primary);
	color: var(--primary-contrast);
}

.about .content h3 {
	font-weight: 600;
	font-size: 26px;
}
.about .content ul {
	list-style: none;
	padding: 0;
}
.about .content ul li {
	display: flex;
	align-items: flex-start;
	margin-bottom: 35px;
}

.about .content ul li:first-child {
	margin-top: 35px;
}
.about .content ul i {
	background: var(--secondary);
	box-shadow: 0px 6px 15px var(--secondary-bg-shadow);
	font-size: 24px;
	padding: 20px;
	margin-right: 15px;
	color: var(--primary);
	border-radius: 50px;
	max-width: 64px;
	max-height: 64px;
	display: flex;
	justify-content: center;
	align-items: center;
}

.about .content ul i span {
	width: 24px;
	height: 24px;
}

.about .content ul h5 {
	font-size: 18px;
	color: var(--secondary);
}
/* ... */

